--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-"log-name":"name1",
+"log-name":"ibge-sept-19",
 "file-to-parse":"sg_info.log",	
 "cb-cluster-host":"127.0.0.1",
 "cb-bucket-name":"sg-log",
 "cb-bucket-user":"Administrator",
-"cb-bucket-user-password":"password",
+"cb-bucket-user-password":"fujiofujio",
 "dt-log-line-offset":0,
 "debug":false
 }
