--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-"log-name":"ibge-sept-19",
+"log-name":"test-today-node-0",
 "file-to-parse":"sg_info.log",	
 "cb-cluster-host":"127.0.0.1",
-"cb-bucket-name":"sg-log",
+"cb-bucket-name":"sg-log-reader",
 "cb-bucket-user":"Administrator",
 "cb-bucket-user-password":"fujiofujio",
 "dt-log-line-offset":0,
