Did Big Group By to make graph not show every entry by default.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 "log-name":"test-today-node-0",
-"file-to-parse":"/Users/fujio.turner/Downloads/abc/fcbh/New Folder With Items/sgcollect_info_ip-10-0-0-83.us-west-2.compute.internal_20230912-215213/sg_info.log",	
+"file-to-parse":"sg_info.log",	
 "cb-cluster-host":"127.0.0.1",
 "cb-bucket-name":"sg-log-reader",
 "cb-bucket-user":"Administrator",
