--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 "log-name":"sg_info.log",
-"file-to-parse":"/sg_info.log",	
+"file-to-parse":"sg_info.log",	
 "cb-cluster-host":"127.0.0.1",
 "cb-bucket-name":"sg-log-reader",
 "cb-bucket-user":"Administrator",
